templates/equiz_template.yaml
---
# Source: equiz/charts/jobe/templates/jobe-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jobe
  name: jobe
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    service: jobe
status:
  loadBalancer: {}
---
# Source: equiz/charts/moodle/charts/mariadb/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mariadb
  namespace: "default"
  labels:
    app.kubernetes.io/name: mariadb
    helm.sh/chart: mariadb-11.3.5
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector: 
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: equiz/charts/moodle/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-moodle
  namespace: "default"
  labels:
    app.kubernetes.io/name: moodle
    helm.sh/chart: moodle-14.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/name: moodle
    app.kubernetes.io/instance: release-name
---
# Source: equiz/charts/jobe/templates/jobe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: jobe
  name: jobe
spec:
  replicas: 1
  selector:
    matchLabels:
      service: jobe
  strategy: {}
  template:
    metadata:
      labels:
        service: jobe
    spec:
      containers:
        - image: docker.io/yzhou442/jobeinabox
        #- image: trampgeek/jobeinabox:latest
          name: jobe
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
---
# Source: equiz/charts/moodle/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-moodle
  namespace: "default"
  labels:
    app.kubernetes.io/name: moodle
    helm.sh/chart: moodle-14.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: moodle
      app.kubernetes.io/instance: release-name
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: moodle
        helm.sh/chart: moodle-14.3.2
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
      annotations:
        prometheus.io/port: '9117'
        prometheus.io/scrape: "true"
    spec:
      
      securityContext:
        fsGroup: 0
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: moodle
                    app.kubernetes.io/instance: release-name
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      priorityClassName: ""
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "status.localhost"
      containers:
        - name: release-name-moodle
          image: docker.io/yzhou442/equiz:latest
          imagePullPolicy: "Always"
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          livenessProbe:
            httpGet:
              path: /login/index.php
              port: http
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /login/index.php
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests:
              cpu: 300m
              memory: 512Mi
          volumeMounts:
            - name: moodle-data
              mountPath: /bitnami/moodle
              subPath: moodle
            - name: moodle-data
              mountPath: /bitnami/moodledata
              subPath: moodledata
      volumes:
        - name: moodle-data
          persistentVolumeClaim:
            claimName: release-name-moodle-moodle
---
# Source: equiz/charts/moodle/charts/mariadb/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-mariadb
  namespace: "default"
  labels:
    app.kubernetes.io/name: mariadb
    helm.sh/chart: mariadb-11.3.5
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels: 
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: primary
  serviceName: release-name-mariadb
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: aa0b6fbd00bffdad479407a1c4d185386445b51f34832bf185c7180419dbdb90
      labels:
        app.kubernetes.io/name: mariadb
        helm.sh/chart: mariadb-11.3.5
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
    spec:
      
      serviceAccountName: release-name-mariadb
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: mariadb
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: mariadb
          image: docker.io/bitnami/mariadb:10.6.11-debian-11-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          resources: 
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
            - name: config
              mountPath: /opt/bitnami/mariadb/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: release-name-mariadb
  volumeClaimTemplates:
    - metadata:
        name: data
        labels: 
          app.kubernetes.io/name: mariadb
          app.kubernetes.io/instance: release-name
          app.kubernetes.io/component: primary
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: equiz/charts/moodle/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-moodle
  namespace: "default"
  labels:
    app.kubernetes.io/name: moodle
    helm.sh/chart: moodle-14.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 200M
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "public"
  rules:
    - host: deep.cs.cityu.edu.hk
      http:
        paths:
          - path: /equiz(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: release-name-moodle
                port:
                  name: http
  tls:
    - hosts:
        - deep.cs.cityu.edu.hk
      secretName: deep.cs.cityu.edu.hk-tls
